[gd_scene load_steps=12 format=3 uid="uid://u3fd4wboe564"]

[ext_resource type="Script" path="res://Scripts/Level_Selector.gd" id="1_44mqt"]
[ext_resource type="PackedScene" uid="uid://gklfpx5uo83n" path="res://Scenes/Nivel_1.tscn" id="2_4eyo6"]
[ext_resource type="PackedScene" uid="uid://cw0yn1tnj1e5g" path="res://Scenes/Nivel_2.tscn" id="3_fbkvc"]
[ext_resource type="PackedScene" uid="uid://du7x3teefx44e" path="res://Scenes/Nivel_3.tscn" id="4_oa4hl"]
[ext_resource type="PackedScene" uid="uid://i58bqr5sxwu6" path="res://Scenes/Nivel_Muestra.tscn" id="4_t3ona"]
[ext_resource type="Theme" uid="uid://3q8g8t8ar2en" path="res://Resources/UI_Main_Menu_theme.tres" id="6_62sw5"]
[ext_resource type="Texture2D" uid="uid://b8ylvap71fwu6" path="res://Assets/Complete_GUI_Essential_Pack_Free_Version/01_Basic_Collection/01_Flat_Theme/Sprites/UI_Flat_Banner_01_Downward.png" id="7_m87yf"]
[ext_resource type="PackedScene" uid="uid://1vtcpqi3idl7" path="res://Scenes/Fondo_Menus.tscn" id="8_i0rhp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i0j4a"]
atlas = ExtResource("7_m87yf")
region = Rect2(0, 3, 96, 22)

[sub_resource type="Animation" id="Animation_ky8e6"]
resource_name = "Level_Pressed"
step = 0.0416667

[sub_resource type="AnimationLibrary" id="AnimationLibrary_soa0t"]
_data = {
"Level_Pressed": SubResource("Animation_ky8e6")
}

[node name="Level_Select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_44mqt")
Nivel1 = ExtResource("2_4eyo6")
Nivel2 = ExtResource("3_fbkvc")
Nivel3 = ExtResource("4_oa4hl")
Nivel4 = ExtResource("4_t3ona")

[node name="Margen" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Margen"]
custom_minimum_size = Vector2(600, 600)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("6_62sw5")

[node name="MarginContainer" type="MarginContainer" parent="Margen/PanelContainer"]
custom_minimum_size = Vector2(288, 66)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = 40

[node name="TextureRect" type="TextureRect" parent="Margen/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(480, 110)
layout_mode = 2
texture = SubResource("AtlasTexture_i0j4a")

[node name="Titulo" type="Label" parent="Margen/PanelContainer/MarginContainer/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = 10.0
offset_right = 152.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_62sw5")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Level Selection"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Margen/PanelContainer"]
custom_minimum_size = Vector2(500, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="MarginContainer" type="MarginContainer" parent="Margen/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Boton1" type="Button" parent="Margen/PanelContainer/GridContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("6_62sw5")
theme_type_variation = &"MainButton"
theme_override_font_sizes/font_size = 30
text = "Level 1"

[node name="MarginContainer2" type="MarginContainer" parent="Margen/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Boton2" type="Button" parent="Margen/PanelContainer/GridContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("6_62sw5")
theme_type_variation = &"MainButton"
theme_override_font_sizes/font_size = 30
text = "Level 2"

[node name="MarginContainer3" type="MarginContainer" parent="Margen/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Boton3" type="Button" parent="Margen/PanelContainer/GridContainer/MarginContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("6_62sw5")
theme_type_variation = &"MainButton"
theme_override_font_sizes/font_size = 30
text = "Level 3"

[node name="MarginContainer4" type="MarginContainer" parent="Margen/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Boton4" type="Button" parent="Margen/PanelContainer/GridContainer/MarginContainer4"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("6_62sw5")
theme_type_variation = &"MainButton"
theme_override_font_sizes/font_size = 30
text = "Test Level"

[node name="Back" type="MarginContainer" parent="Margen/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_bottom = 25

[node name="MainMenu" type="Button" parent="Margen/PanelContainer/Back"]
unique_name_in_owner = true
custom_minimum_size = Vector2(252, 86)
layout_mode = 2
theme = ExtResource("6_62sw5")
theme_type_variation = &"SecondaryButton"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="FondoMenus" parent="." instance=ExtResource("8_i0rhp")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_soa0t")
}
